--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cypress": "^12.7.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.25.2",
     "prettier": "2.8.4",
     "typescript": "^4.9.5"
