--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cypress:open": "yarn cypress open"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "cypress": "^12.7.0",
     "eslint": "^8.0.1",
